tests/security/shapeSourcesThroughVec/output.txt
ERROR: TaintedData - input.hack:11:14 - Data from a user secret found its way to generic output